"""libcurl — cmake. Depends on openssl + zlib.

Originally configured as `configure_make`, but curl 8.12.1's autotools probes
behave erratically inside the foreign_cc + toolchains_llvm sandbox on darwin
(`fcntl is prototyped` test fails to find `<sys/types.h>` despite the same
header working for the immediately preceding `fcntl can be linked` probe;
the failure cascades into `nonblock.c: "no non-blocking method was found"`).
The CMake build path skips that whole class of probes and is the upstream-
recommended path on macOS, so we switch.

Configure flags map 1:1 to the CMake equivalents (`HTTP_ONLY=ON` covers
the bulk of the protocol disables; the ones it doesn't are spelled out).
"""

load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

package(default_visibility = ["//visibility:public"])

cmake(
    name = "curl",
    lib_source = "@curl//:all_srcs",
    cache_entries = {
        "CMAKE_INSTALL_LIBDIR": "lib",
        # Suppress Bazel's auto-injected `CMAKE_BUILD_TYPE=Debug` so curl's
        # `set_target_properties(libcurl_static PROPERTIES DEBUG_POSTFIX "-d")`
        # doesn't kick in and rename the static library to `libcurl-d.a`.
        # See ext/png/BUILD.bazel for the full rationale.
        "CMAKE_BUILD_TYPE": "RelWithDebInfo",
        "BUILD_SHARED_LIBS": "OFF",
        "BUILD_STATIC_LIBS": "ON",
        "BUILD_CURL_EXE": "OFF",
        "BUILD_TESTING": "OFF",
        "ENABLE_DOCS": "OFF",
        "ENABLE_MANUAL": "OFF",
        # Drop everything except HTTP / HTTPS — matches the original
        # `--disable-{ldap,ldaps,rtsp,dict,telnet,tftp,pop3,imap,smb,smtp,gopher,mqtt}` set.
        "HTTP_ONLY": "ON",
        "CURL_DISABLE_LDAP": "ON",
        "CURL_DISABLE_LDAPS": "ON",
        # SSL backend: foreign_cc-built OpenSSL.
        "CURL_USE_OPENSSL": "ON",
        "OPENSSL_ROOT_DIR": "$$EXT_BUILD_DEPS/openssl",
        "ZLIB_ROOT": "$$EXT_BUILD_DEPS/zlib",
        "ZLIB_INCLUDE_DIR": "$$EXT_BUILD_DEPS/zlib/include",
        "ZLIB_LIBRARY": "$$EXT_BUILD_DEPS/zlib/lib/libz.a",
        # Drop transports we don't need so we don't hunt for system libs.
        "CURL_USE_LIBPSL": "OFF",
        "CURL_BROTLI": "OFF",
        "CURL_ZSTD": "OFF",
        # `USE_LIBIDN2` (no `CURL_` prefix) is the canonical curl 8.x
        # option. With it set OFF the resulting libcurl.a doesn't pull in
        # `idn2_lookup_ul` / `idn2_check_version` from system libidn2.
        "USE_LIBIDN2": "OFF",
        "USE_NGHTTP2": "OFF",
        # Disable SSH backends explicitly. CMake's curl auto-detects
        # libssh2 / libssh from the host environment (the Nix dev shell
        # has libssh2 on its lib search path), enabling them by default.
        # When the resulting libcurl.a is then linked into sipi, the
        # final link fails with hundreds of `undefined symbol:
        # libssh2_*` errors because libssh2 isn't a declared dep
        # anywhere in the Bazel graph. Sipi only uses HTTP/HTTPS — SSH
        # is unused, so disable it at the curl level.
        "CURL_USE_LIBSSH2": "OFF",
        "CURL_USE_LIBSSH": "OFF",
    },
    # Pin --config used by `cmake --build` and `cmake --install` —
    # see ext/png/BUILD.bazel for the rationale.
    configuration = "RelWithDebInfo",
    out_static_libs = ["libcurl.a"],
    set_file_prefix_map = True,
    deps = [
        "//ext/openssl:openssl",
        "//ext/zlib:zlib",
    ],
)
