"""Exiv2 — cmake. Depends on expat + png + zlib.

Mirrors `ext/exiv2/CMakeLists.txt`. Static-only; samples / cli / nls off.
"""

load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")
load(
    "//bazel:foreign_cc_helpers.bzl",
    "darwin_cmake_build_data",
    "darwin_cmake_cache_entries",
    "darwin_link_wrapper_build_data",
    "darwin_link_wrapper_env",
)

package(default_visibility = ["//visibility:public"])

cmake(
    name = "exiv2",
    lib_source = "@exiv2//:all_srcs",
    cache_entries = darwin_cmake_cache_entries({
        # Suppress Bazel's auto-injected CMAKE_BUILD_TYPE=Debug — see
        # ext/png/BUILD.bazel for the rationale (Debug-postfix hazard).
        "CMAKE_BUILD_TYPE": "RelWithDebInfo",
        "CMAKE_INSTALL_LIBDIR": "lib",
        "BUILD_SHARED_LIBS": "OFF",
        "EXIV2_ENABLE_INIH": "OFF",
        "EXIV2_ENABLE_BROTLI": "OFF",
        "EXIV2_BUILD_SAMPLES": "OFF",
        "EXIV2_BUILD_EXIV2_COMMAND": "OFF",
        "EXIV2_ENABLE_NLS": "OFF",
        # libc++ ships std::filesystem in the main library — no -lstdc++fs /
        # -lc++fs is needed. Under the hermetic LLVM toolchain, foreign_cc
        # captures the toolchain's link *flags* (incl. `-nostdlib++`) but not
        # its libc++ `libraries_to_link`, so exiv2's cmake/FindFilesystem.cmake
        # `check_cxx_source_runs` probe cannot link libc++ and aborts with
        # "Cannot run simple program using std::filesystem". Pre-seed the
        # known-correct result to skip the probe; the real libc++ is linked at
        # SIPI's final link. See docs/adr/0014-toolchain-provider-swap.md.
        "CXX_FILESYSTEM_NO_LINK_NEEDED": "TRUE",
    }),
    # Pin --config used by `cmake --build` and `cmake --install` —
    # see ext/png/BUILD.bazel for the rationale.
    configuration = "RelWithDebInfo",
    out_static_libs = [
        # exiv2 0.28.x consolidated the XMP support into `libexiv2.a`;
        # the standalone `libexiv2-xmp.a` from earlier releases is gone.
        "libexiv2.a",
    ],
    set_file_prefix_map = True,
    # The macOS link-wrapper needs an absolute clang++ to link CMake's
    # compiler-detection test from foreign_cc's relocated build dir.
    env = darwin_link_wrapper_env(),
    build_data = darwin_cmake_build_data() + darwin_link_wrapper_build_data(),
    deps = [
        "@libexpat",
        "//ext/png:png",
        "@zlib",
    ],
)
